--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/fufu.html">SPECIAL FUFU</a></li>
-        <li><a href="recipes/waakye.html">WAAKYE</a></li>
-        <li><a href="recipes/gobe.html">ALMIGHTY GOBE</a></li>
+        <li><a href="fufu.html">SPECIAL FUFU</a></li>
+        <li><a href="waakye.html">WAAKYE</a></li>
+        <li><a href="gobe.html">ALMIGHTY GOBE</a></li>
     </ul>
     
 </body>
