--- a/waakye.html
+++ b/waakye.html
@@ -6,8 +6,8 @@
     <title>waakye</title>
 </head>
 <body>
-    <h1>FUFU</h1>
-    <img src="images/waakye1.jpg" width="300" height="200">
+    <h1>WAAKYE</h1>
+    <img src="images/waakye3.jpeg" width="700" height="500">
     <h2>WAAKYE DESCRIBTION</h2>
     <p>This is Ghanaian native food called waakye, it is made with rice and beans, <br> the beans is boiled with the rice till the mixed together <br>it is then pounded until it beomes soft and forms together<br> 
     Waakye is normally served with black pepper source called shito <br>gari, salad and macroni. Waakye is best eaten in the morning
