added image to the index page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="images/recipes.jpg" width="500" height="200"
     <ul>
         <li><a href="fufu.html">SPECIAL FUFU</a></li>
         <li><a href="waakye.html">WAAKYE</a></li>
